corpus/declarations.txt
================================================================================
Modules
================================================================================

mod english;

mod english {}

mod english {
    mod greetings {}
    mod farewells {}
}

pub mod english;

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (mod_item
      (identifier)))
  (declaration_statement
    (mod_item
      (identifier)
      (declaration_list)))
  (declaration_statement
    (mod_item
      (identifier)
      (declaration_list
        (declaration_statement
          (mod_item
            (identifier)
            (declaration_list)))
        (declaration_statement
          (mod_item
            (identifier)
            (declaration_list))))))
  (declaration_statement
    (mod_item
      (visibility_modifier)
      (identifier))))

================================================================================
Extern crate declarations
================================================================================

extern crate std;
extern crate std as ruststd;
pub extern crate futures;

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (extern_crate_declaration
      (crate)
      (identifier)))
  (declaration_statement
    (extern_crate_declaration
      (crate)
      (identifier)
      (identifier)))
  (declaration_statement
    (extern_crate_declaration
      (visibility_modifier)
      (crate)
      (identifier))))

================================================================================
Function declarations
================================================================================

fn main() {}

fn add(x: i32, y: i32) -> i32 {
    return x + y;
}

fn takes_slice(slice: &str) {
    println!("Got: {}", slice);
}

fn foo() -> [u32; 2] {
    return [1, 2];
}

fn foo() -> (u32, u16) {
    return (1, 2);
}

fn foo() {
    return
}

fn foo(x: impl FnOnce() -> result::Result<T, E>) {}

fn foo(#[attr] x: i32, #[attr] x: i64) {}

fn accumulate(self) -> Machine<{State::Accumulate}> {}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters)
      body: (block)))
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters
        (parameter
          pattern: (identifier)
          type: (primitive_type))
        (parameter
          pattern: (identifier)
          type: (primitive_type)))
      return_type: (primitive_type)
      body: (block
        (return_expression
          (binary_expression
            left: (identifier)
            right: (identifier))))))
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters
        (parameter
          pattern: (identifier)
          type: (reference_type
            type: (primitive_type))))
      body: (block
        (macro_invocation
          macro: (identifier)
          (token_tree
            (string_literal)
            (non_special_punctuation)
            (identifier))))))
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters)
      return_type: (array_type
        element: (primitive_type)
        length: (integer_literal))
      body: (block
        (return_expression
          (array_expression
            (integer_literal)
            (integer_literal))))))
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters)
      return_type: (tuple_type
        (primitive_type)
        (primitive_type))
      body: (block
        (return_expression
          (tuple_expression
            (integer_literal)
            (integer_literal))))))
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters)
      body: (block
        (return_expression))))
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters
        (parameter
          pattern: (identifier)
          type: (abstract_type
            trait: (function_type
              trait: (type_identifier)
              parameters: (parameters)
              return_type: (generic_type
                type: (scoped_type_identifier
                  path: (identifier)
                  name: (type_identifier))
                type_arguments: (type_arguments
                  (type_identifier)
                  (type_identifier)))))))
      body: (block)))
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters
        (attribute_item
          (meta_item
            (identifier)))
        (parameter
          pattern: (identifier)
          type: (primitive_type))
        (attribute_item
          (meta_item
            (identifier)))
        (parameter
          pattern: (identifier)
          type: (primitive_type)))
      body: (block)))
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters
        (self_parameter
          (self)))
      return_type: (generic_type
        type: (type_identifier)
        type_arguments: (type_arguments
          (block
            (scoped_identifier
              path: (identifier)
              name: (identifier)))))
      body: (block))))

================================================================================
Const function declarations
================================================================================

const fn main() {}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (function_item
      (function_modifiers)
      (identifier)
      (parameters)
      (block))))

================================================================================
Functions with abstract return types
================================================================================

fn triples(a: impl B) -> impl Iterator<Item=(usize)> {
}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (function_item
      (identifier)
      (parameters
        (parameter
          (identifier)
          (abstract_type
            (type_identifier))))
      (abstract_type
        (generic_type
          (type_identifier)
          (type_arguments
            (type_binding
              (type_identifier)
              (tuple_type
                (primitive_type))))))
      (block))))

================================================================================
Diverging functions
================================================================================

fn aborts() -> ! {
}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (function_item
      (identifier)
      (parameters)
      (empty_type)
      (block))))

================================================================================
Extern function declarations
================================================================================

extern "C" fn foo() {}
extern "C" fn printf(
    *const c_char,
    ...,
) {}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (function_item
      (function_modifiers
        (extern_modifier
          (string_literal)))
      (identifier)
      (parameters)
      (block)))
  (declaration_statement
    (function_item
      (function_modifiers
        (extern_modifier
          (string_literal)))
      (identifier)
      (parameters
        (pointer_type
          (type_identifier))
        (variadic_parameter))
      (block))))

================================================================================
Use declarations
================================================================================

use abc;
use phrases::japanese;
use sayings::english::greetings;
use sayings::english::greetings as en_greetings ;
use phrases::english::{greetings,farewells};
use sayings::japanese::farewells::*;
pub use self::greetings::hello;
use sayings::english::{self, greetings as en_greetings, farewells as en_farewells};
use three::{ dot::{one, four} };
use my::{ some::* };
use my::{*};

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (use_declaration
      argument: (identifier)))
  (declaration_statement
    (use_declaration
      argument: (scoped_identifier
        path: (identifier)
        name: (identifier))))
  (declaration_statement
    (use_declaration
      argument: (scoped_identifier
        path: (scoped_identifier
          path: (identifier)
          name: (identifier))
        name: (identifier))))
  (declaration_statement
    (use_declaration
      argument: (use_as_clause
        path: (scoped_identifier
          path: (scoped_identifier
            path: (identifier)
            name: (identifier))
          name: (identifier))
        alias: (identifier))))
  (declaration_statement
    (use_declaration
      argument: (scoped_use_list
        path: (scoped_identifier
          path: (identifier)
          name: (identifier))
        list: (use_list
          (identifier)
          (identifier)))))
  (declaration_statement
    (use_declaration
      argument: (use_wildcard
        (scoped_identifier
          path: (scoped_identifier
            path: (identifier)
            name: (identifier))
          name: (identifier)))))
  (declaration_statement
    (use_declaration
      (visibility_modifier)
      argument: (scoped_identifier
        path: (scoped_identifier
          path: (self)
          name: (identifier))
        name: (identifier))))
  (declaration_statement
    (use_declaration
      argument: (scoped_use_list
        path: (scoped_identifier
          path: (identifier)
          name: (identifier))
        list: (use_list
          (self)
          (use_as_clause
            path: (identifier)
            alias: (identifier))
          (use_as_clause
            path: (identifier)
            alias: (identifier))))))
  (declaration_statement
    (use_declaration
      argument: (scoped_use_list
        path: (identifier)
        list: (use_list
          (scoped_use_list
            path: (identifier)
            list: (use_list
              (identifier)
              (identifier)))))))
  (declaration_statement
    (use_declaration
      argument: (scoped_use_list
        path: (identifier)
        list: (use_list
          (use_wildcard
            (identifier))))))
  (declaration_statement
    (use_declaration
      argument: (scoped_use_list
        path: (identifier)
        list: (use_list
          (use_wildcard))))))

================================================================================
Variable bindings
================================================================================

let x;
let x = 42;
let x: i32;
let x: i8 = 42;
let mut x = 5;
let y: bool = false;
let bool: bool = false;
let u32: str = "";

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (let_declaration
      (identifier)))
  (declaration_statement
    (let_declaration
      (identifier)
      (integer_literal)))
  (declaration_statement
    (let_declaration
      (identifier)
      (primitive_type)))
  (declaration_statement
    (let_declaration
      (identifier)
      (primitive_type)
      (integer_literal)))
  (declaration_statement
    (let_declaration
      (mutable_specifier)
      (identifier)
      (integer_literal)))
  (declaration_statement
    (let_declaration
      (identifier)
      (primitive_type)
      (boolean_literal)))
  (declaration_statement
    (let_declaration
      (identifier)
      (primitive_type)
      (boolean_literal)))
  (declaration_statement
    (let_declaration
      (identifier)
      (primitive_type)
      (string_literal))))

================================================================================
Structs
================================================================================

struct Proton;
struct Electron {}
struct Person {pub name: String, pub age: u32}
struct Point {
  x: i32,

  #[attribute1]
  y: i32,
}
struct Color(pub i32, i32, i32);
struct Inches(i32);

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (struct_item
      (type_identifier)))
  (declaration_statement
    (struct_item
      (type_identifier)
      (field_declaration_list)))
  (declaration_statement
    (struct_item
      (type_identifier)
      (field_declaration_list
        (field_declaration
          (visibility_modifier)
          (field_identifier)
          (type_identifier))
        (field_declaration
          (visibility_modifier)
          (field_identifier)
          (primitive_type)))))
  (declaration_statement
    (struct_item
      (type_identifier)
      (field_declaration_list
        (field_declaration
          (field_identifier)
          (primitive_type))
        (attribute_item
          (meta_item
            (identifier)))
        (field_declaration
          (field_identifier)
          (primitive_type)))))
  (declaration_statement
    (struct_item
      (type_identifier)
      (ordered_field_declaration_list
        (visibility_modifier)
        (primitive_type)
        (primitive_type)
        (primitive_type))))
  (declaration_statement
    (struct_item
      (type_identifier)
      (ordered_field_declaration_list
        (primitive_type)))))

================================================================================
Unions
================================================================================

pub union in6_addr__bindgen_ty_1 {
    pub __u6_addr8: [__uint8_t; 16usize],
    pub __u6_addr16: [__uint16_t; 8usize],
    pub __u6_addr32: [__uint32_t; 4usize],
    _bindgen_union_align: [u32; 4usize],
}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (union_item
      (visibility_modifier)
      (type_identifier)
      (field_declaration_list
        (field_declaration
          (visibility_modifier)
          (field_identifier)
          (array_type
            (type_identifier)
            (integer_literal)))
        (field_declaration
          (visibility_modifier)
          (field_identifier)
          (array_type
            (type_identifier)
            (integer_literal)))
        (field_declaration
          (visibility_modifier)
          (field_identifier)
          (array_type
            (type_identifier)
            (integer_literal)))
        (field_declaration
          (field_identifier)
          (array_type
            (primitive_type)
            (integer_literal)))))))

================================================================================
Generic structs
================================================================================

struct A<B> {}
struct C<'a, 'b> {}
struct C<'a,> {}
struct D<const SIZE: usize> {}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (struct_item
      name: (type_identifier)
      type_parameters: (type_parameters
        (type_identifier))
      body: (field_declaration_list)))
  (declaration_statement
    (struct_item
      name: (type_identifier)
      type_parameters: (type_parameters
        (lifetime
          (identifier))
        (lifetime
          (identifier)))
      body: (field_declaration_list)))
  (declaration_statement
    (struct_item
      name: (type_identifier)
      type_parameters: (type_parameters
        (lifetime
          (identifier)))
      body: (field_declaration_list)))
  (declaration_statement
    (struct_item
      name: (type_identifier)
      type_parameters: (type_parameters
        (const_parameter
          name: (identifier)
          type: (primitive_type)))
      body: (field_declaration_list))))

================================================================================
Enums
================================================================================

pub enum Option<T> {
    None,
    Some(T),
}

pub enum Node<T: Item> {
    Internal {
        children: Vec<Tree<T>>,
        height: u16
    },
    #[attribute1]
    #[attribute2]
    Leaf {
        value: T
    }
}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (enum_item
      (visibility_modifier)
      (type_identifier)
      (type_parameters
        (type_identifier))
      (enum_variant_list
        (enum_variant
          (identifier))
        (enum_variant
          (identifier)
          (ordered_field_declaration_list
            (type_identifier))))))
  (declaration_statement
    (enum_item
      (visibility_modifier)
      (type_identifier)
      (type_parameters
        (constrained_type_parameter
          (type_identifier)
          (trait_bounds
            (type_identifier))))
      (enum_variant_list
        (enum_variant
          (identifier)
          (field_declaration_list
            (field_declaration
              (field_identifier)
              (generic_type
                (type_identifier)
                (type_arguments
                  (generic_type
                    (type_identifier)
                    (type_arguments
                      (type_identifier))))))
            (field_declaration
              (field_identifier)
              (primitive_type))))
        (attribute_item
          (meta_item
            (identifier)))
        (attribute_item
          (meta_item
            (identifier)))
        (enum_variant
          (identifier)
          (field_declaration_list
            (field_declaration
              (field_identifier)
              (type_identifier))))))))

================================================================================
Enums with values specified
================================================================================

pub enum c_style_enum {
    val1 = 1,
    val2 = 2
}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (enum_item
      (visibility_modifier)
      (type_identifier)
      (enum_variant_list
        (enum_variant
          (identifier)
          (integer_literal))
        (enum_variant
          (identifier)
          (integer_literal))))))

================================================================================
Generic functions
================================================================================

pub fn splice<T: Into<Text>>(&mut self, old_range: Range<usize>, new_text: T) {
}
pub fn uninit_array<const LEN: usize>() -> [Self; LEN] {}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (function_item
      (visibility_modifier)
      name: (identifier)
      type_parameters: (type_parameters
        (constrained_type_parameter
          left: (type_identifier)
          bounds: (trait_bounds
            (generic_type
              type: (type_identifier)
              type_arguments: (type_arguments
                (type_identifier))))))
      parameters: (parameters
        (self_parameter
          (mutable_specifier)
          (self))
        (parameter
          pattern: (identifier)
          type: (generic_type
            type: (type_identifier)
            type_arguments: (type_arguments
              (primitive_type))))
        (parameter
          pattern: (identifier)
          type: (type_identifier)))
      body: (block)))
  (declaration_statement
    (function_item
      (visibility_modifier)
      name: (identifier)
      type_parameters: (type_parameters
        (const_parameter
          name: (identifier)
          type: (primitive_type)))
      parameters: (parameters)
      return_type: (array_type
        element: (type_identifier)
        length: (identifier))
      body: (block))))

================================================================================
Functions with mutable parameters
================================================================================

fn foo(mut x : u32) {
}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (function_item
      (identifier)
      (parameters
        (parameter
          (mutable_specifier)
          (identifier)
          (primitive_type)))
      (block))))

================================================================================
Functions with destructured parameters
================================================================================

fn f1([x, y]: [u32; 2]) {}
fn f2(&x: &Y) {}
fn f3((x, y): (T, U)) {}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (function_item
      (identifier)
      (parameters
        (parameter
          (slice_pattern
            (identifier)
            (identifier))
          (array_type
            (primitive_type)
            (integer_literal))))
      (block)))
  (declaration_statement
    (function_item
      (identifier)
      (parameters
        (parameter
          (reference_pattern
            (identifier))
          (reference_type
            (type_identifier))))
      (block)))
  (declaration_statement
    (function_item
      (identifier)
      (parameters
        (parameter
          (tuple_pattern
            (identifier)
            (identifier))
          (tuple_type
            (type_identifier)
            (type_identifier))))
      (block))))

================================================================================
Functions with custom types for self
================================================================================

trait Callback {
    fn call(self: Box<Self>);
}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (trait_item
      (type_identifier)
      (declaration_list
        (declaration_statement
          (function_signature_item
            (identifier)
            (parameters
              (parameter
                (self)
                (generic_type
                  (type_identifier)
                  (type_arguments
                    (type_identifier)))))))))))

================================================================================
Constant items
================================================================================

const N: i32 = 5;

trait Foo {
    const X: u8;
}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (const_item
      (identifier)
      (primitive_type)
      (integer_literal)))
  (declaration_statement
    (trait_item
      (type_identifier)
      (declaration_list
        (declaration_statement
          (const_item
            (identifier)
            (primitive_type)))))))

================================================================================
Static items
================================================================================

static N: i32 = 5;
static mut __progname: *mut ::c_char;

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (static_item
      (identifier)
      (primitive_type)
      (integer_literal)))
  (declaration_statement
    (static_item
      (mutable_specifier)
      (identifier)
      (pointer_type
        (mutable_specifier)
        (scoped_type_identifier
          (type_identifier))))))

================================================================================
Static 'ref' items using lazy_static
================================================================================

static ref ONE: usize = 0;

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (static_item
      (identifier)
      (primitive_type)
      (integer_literal))))

================================================================================
Type aliases
================================================================================

type Inch = u64;
type Name<T> = Vec<T>;

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (type_item
      (type_identifier)
      (primitive_type)))
  (declaration_statement
    (type_item
      (type_identifier)
      (type_parameters
        (type_identifier))
      (generic_type
        (type_identifier)
        (type_arguments
          (type_identifier))))))

================================================================================
Empty statements
================================================================================

fn main() {
    ;
}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (function_item
      (identifier)
      (parameters)
      (block
        (declaration_statement
          (empty_statement))))))

================================================================================
Attributes
================================================================================

#[test]
fn test_foo() {}

#[derive(Debug)]
struct Baz;

#[derive(Debug, Eq,)]
struct Foo;

#[cfg(target_os = "macos")]
mod macos_only {}

#![allow(clippy::useless_transmute)]
fn foo() {}

#[clippy::cyclomatic_complexity = "100"]
fn bar() {}

--------------------------------------------------------------------------------

(source_file
  (declaration_statement
    (attribute_item
      (meta_item
        (identifier)))
    (function_item
      name: (identifier)
      parameters: (parameters)
      body: (block)))
  (declaration_statement
    (attribute_item
      (meta_item
        (identifier)
        arguments: (meta_arguments
          (meta_item
            (identifier)))))
    (struct_item
      name: (type_identifier)))
  (declaration_statement
    (attribute_item
      (meta_item
        (identifier)
        arguments: (meta_arguments
          (meta_item
            (identifier))
          (meta_item
            (identifier)))))
    (struct_item
      name: (type_identifier)))
  (declaration_statement
    (attribute_item
      (meta_item
        (identifier)
        arguments: (meta_arguments
          (meta_item
            (identifier)
            value: (string_literal)))))
    (mod_item
      name: (identifier)
      body: (declaration_list)))
  (declaration_statement
    (inner_attribute_item
      (meta_item
        (identifier)
        arguments: (meta_arguments
          (meta_item
            (scoped_identifier
              path: (identifier)
              name: (identifier)))))))
  (declaration_statement
    (function_item
      name: (identifier)
      parameters: (parameters)
      body: (block)))
  (declaration_statement
    (attribute_item
      (meta_item
        (scoped_identifier
          path: (identifier)
          name: (identifier))
        value: (string_literal)))
    (function_item
      name: (identifier)
      parameters: (parameters)
      body: (block))))
